--- a/index.html
+++ b/index.html
@@ -7,6 +7,15 @@
 </head>
 
 <body>
+    <h1>FizzBuzz問題</h1>
+
+    FizzNum: <input type="text" id="FizzNum" placeholder="整数値を入力してください"><br>
+    BuzzNum:<input type="text" id="BuzzNum" placeholder="整数値を入力してください"><br>
+    <button type="button" id="button-action">実行</button><br>
+
+    <p>【出力】</p>
+    <div id="output"></div>
+
     <script src="main.js"></script>
 </body>
 
