--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <button type="button" id="button-action">実行</button><br>
 
     <p>【出力】</p>
-    <div id="output"></div>
+    <ul id="output" style="padding-left: 0;"></ul>
 
     <script src="main.js"></script>
 </body>
