--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <!--タスクの追加-->
     <h2>新規タスクの追加</h2>
     <input type="text" id="new-task-comment" style="margin-right: 10px;">
-    <button type="button" id="button-addtask">追加</button>
+    <button type="button" id="button-add-task">追加</button>
 
     <script src="main.js"></script>
 </body>
