--- a/index.html
+++ b/index.html
@@ -4,32 +4,35 @@
 <head>
     <meta charset="utf-8">
     <title>JavaScript Test</title>
+    <link rel="stylesheet" href="main.css">
 </head>
 
 <body>
-    <h1>TODOリスト</h1>
+    <!--開始・取得・結果表示部分-->
+    <div id="start-message">
+        <h1 id="start-message-title">ようこそ</h1>
+        <p class="message-text--start message-text" id="start-message-text">以下のボタンをクリック</p>
+        <button type="button" id="start-button">開始</button>
+        <button type="button" id="home-button">ホームに戻る</button>
+    </div>
 
-    <!-- 状態絞り込み -->
-    <input type="radio" name="filter-status" value="all" checked="checked">すべて
-    <input type="radio" name="filter-status" value="working">作業中
-    <input type="radio" name="filter-status" value="finished">完了
+    <!--問題表示部分-->
+    <div id="question">
+        <h1 id="question-title"></h1>
+        <div class="question__detail">
+            <p id="question-category"></p>
+            <p id="question-difficulty"></p><br>
+        </div>
 
-    <!-- タスク一覧表示-->
-    <table>
-        <thead>
-            <tr>
-                <th>ID</th>
-                <th>コメント</th>
-                <th>状態</th>
-            </tr>
-        </thead>
-        <tbody id="task-list"></tbody>
-    </table>
-
-    <!--タスクの追加-->
-    <h2>新規タスクの追加</h2>
-    <input type="text" id="new-task-comment" style="margin-right: 10px;">
-    <button type="button" id="button-add-task">追加</button>
+        <p class="message-text" id="question-text"></p>
+        <!--選択肢-->
+        <div class="question__select">
+            <button type="button" class="question__select-button" id="selectA"></button>
+            <button type="button" class="question__select-button" id="selectB"></button>
+            <button type="button" class="question__select-button" id="selectC"></button>
+            <button type="button" class="question__select-button" id="selectD"></button>
+        </div>
+    </div>
 
     <script src="main.js"></script>
 </body>
